--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,5 +39,5 @@ jobs:
     - name: Invalidate CloudFront
       run: |
         aws cloudfront create-invalidation \
-          --distribution-id E1ABC2DEF3 \
-          --paths "/_astro/*" "/index.html" "en-construccion" "img" "js" "politicas-privacidad" "videos" "sitemap-0.xml" "sitemap-index.xml"
+          --distribution-id E338RE4NT2C66B \
+          --paths "/_astro/*" "/index.html" "/en-construccion/" "/img" "/js" "/politicas-privacidad" "/videos" "/sitemap-0.xml" "/sitemap-index.xml"
