--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,23 +66,39 @@
 #      - name: Verify
 #        run: aws sts get-caller-identity
 
-name: get Token
-
-on:
-  push:
-    branches: [ main ]
+name: Debug OIDC Token
+on: [push]
 
 permissions:
-  id-token: write   # OIDC
-  contents: read
+  id-token: write  # Necesario para obtener el token OIDC
+  contents: read   # Necesario para clonar el repo
 
 jobs:
-  build-deploy:
+  debug-token:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Get OIDC token
-      id: oidc
-      run: |
-        echo "OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.amazonaws.com" -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}" | jq -r '.value')" >> $GITHUB_OUTPUT
-        echo "OIDC_TOKEN=$OIDC_TOKEN" >> $GITHUB_ENV
+      - name: Get OIDC token
+        id: oidc
+        run: |
+          # Imprime la URL y headers para debug (esto aparecerá en los logs)
+          echo "URL: ${ACTIONS_ID_TOKEN_REQUEST_URL}?audience=sts.amazonaws.com"
+          echo "Headers:"
+          echo "User-Agent: actions/oidc-client"
+          echo "Authorization: Bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}"
+
+          # Solicita el token y lo guarda en una variable
+          OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}?audience=sts.amazonaws.com" \
+            -H "User-Agent: actions/oidc-client" \
+            -H "Authorization: Bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}" | jq -r '.value')
+          
+          # Verifica si el token está vacío
+          if [ -z "$OIDC_TOKEN" ]; then
+            echo "::error::No se pudo obtener el token OIDC. Revisa los permisos del job."
+            exit 1
+          fi
+
+          # Muestra los primeros 50 caracteres del token (para verificar que existe)
+          echo "Token (partial): ${OIDC_TOKEN:0:50}..."
+
+          # Guarda el token en una variable de salida
+          echo "OIDC_TOKEN=${OIDC_TOKEN}" >> $GITHUB_OUTPUT
