--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,29 +44,7 @@
 
 
 
-#name: Test OIDC Connection
-#on: [workflow_dispatch]
-
-#permissions:
-#  id-token: write
-#  contents: read
-
-#jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-      
-#      - name: Configure AWS
-#        uses: aws-actions/configure-aws-credentials@v4
-#        with:
-#          role-to-assume: arn:aws:iam::437151405691:role/deploy-github
-#          aws-region: us-east-1
-          
-#      - name: Verify
-#        run: aws sts get-caller-identity
-
-name: Debug OIDC Token
+name: Test OIDC Connection
 on: [push]
 
 permissions:
@@ -74,37 +52,62 @@ permissions:
   contents: read
 
 jobs:
-  debug-token:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Get OIDC token
-        id: oidc
-        run: |
-          # Solicitar el token directamente con el audience correcto
-          OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.amazonaws.com" \
-            -H "User-Agent: actions/oidc-client" \
-            -H "Authorization: Bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}" \
-            | jq -r '.value')
-          
-          # Verificar que el token no esté vacío
-          if [ -z "$OIDC_TOKEN" ]; then
-            echo "::error::Failed to get OIDC token"
-            exit 1
-          fi
-
-          # Guardar el token en un archivo
-          echo "$OIDC_TOKEN" > token.jwt
-          echo "Token length: ${#OIDC_TOKEN} characters"
-
-          # Opcional: Verificar el contenido del token (solo para debug)
-          echo "Token content (audience):"
-          jq -R 'split(".") | .[1] | @base64d | fromjson | .aud' <<< "$OIDC_TOKEN"
-
-          # Guardar el token como output
-          echo "OIDC_TOKEN=${OIDC_TOKEN}" >> $GITHUB_OUTPUT
-
-      - name: Upload token as artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/checkout@v4
+      
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          name: oidc-token
-          path: token.jwt
+          role-to-assume: arn:aws:iam::437151405691:role/deploy-github
+          aws-region: mx-central-1
+          
+      - name: Verify
+        run: aws sts get-caller-identity
+
+
+
+
+#name: Debug OIDC Token
+#on: [push]
+
+#permissions:
+#  id-token: write
+#  contents: read
+
+#jobs:
+#  debug-token:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Get OIDC token
+#        id: oidc
+#        run: |
+#          # Solicitar el token directamente con el audience correcto
+#          OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.amazonaws.com" \
+#            -H "User-Agent: actions/oidc-client" \
+#            -H "Authorization: Bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}" \
+#            | jq -r '.value')
+          
+#          # Verificar que el token no esté vacío
+#          if [ -z "$OIDC_TOKEN" ]; then
+#            echo "::error::Failed to get OIDC token"
+#            exit 1
+#          fi
+
+#          # Guardar el token en un archivo
+#          echo "$OIDC_TOKEN" > token.jwt
+#          echo "Token length: ${#OIDC_TOKEN} characters"
+
+#          # Opcional: Verificar el contenido del token (solo para debug)
+#          echo "Token content (audience):"
+#          jq -R 'split(".") | .[1] | @base64d | fromjson | .aud' <<< "$OIDC_TOKEN"
+
+#          # Guardar el token como output
+#          echo "OIDC_TOKEN=${OIDC_TOKEN}" >> $GITHUB_OUTPUT
+
+#      - name: Upload token as artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: oidc-token
+#          path: token.jwt
