Revision final Dom 15 Jun 2025 deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         aws cloudfront create-invalidation \
           --distribution-id E338RE4NT2C66B \
-          --paths "/_astro/*" "/index.html" "/en-construccion/" "/img" "/js" "/politicas-privacidad" "/sitemap-0.xml" "/sitemap-index.xml"
+          --paths "/*"
 
 
 
