--- a/.gitignore
+++ b/.gitignore
@@ -77,9 +77,9 @@ temp/
 ###############################################################################
 # Archivos multimedia (video, audio, imágenes pesadas)
 ###############################################################################
-#*.mp4
-#*.mov
-#*.avi
+*.mp4
+*.mov
+*.avi
 #*.mkv
 #*.webm  # común en la web moderna
 #*.mp3
